[package]
name = "discv5-testground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "discv5-testground"
path = "src/main.rs"

[dependencies]
chrono = "0.4.26"

discv5 = { git = "https://github.com/ackintosh/discv5.git", rev = "e6df09a0f32000ae5618d5f2f84413817df3b6e1" }

rand_xorshift = "0.3.0"
serde = "1.0.175"
serde_json = "1.0.104"
testground = "0.4.0"
tokio = { version = "1.29.0", features = ["macros"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# *** mock *** ################################################################
aes-gcm = "0.9.4"
rand = "0.8.5"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
# This version must be kept up to date do it uses the same dependencies as ENR
hkdf = "0.12.3"
enr = { version = "0.9.0", features = ["k256", "ed25519"] }
# #############################################################################
