[package]
name = "discv5-testground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "discv5-testground"
path = "src/main.rs"

[dependencies]
#discv5 = "0.4.0"

# Change rlp to alloy-rlp
# https://github.com/sigp/discv5/pull/212
discv5 = { git = "https://github.com/armaganyildirak/discv5.git", rev = "f86b64af16bfb74c9252e454d2bd52571e0b69d3" }

# Merge master into discv5.2
# https://github.com/sigp/discv5/pull/234
#discv5 = { git = "https://github.com/ackintosh/discv5.git", rev = "c58677e387f27bd075b671ea5d5410a64ffd9bb4"}

chrono = "0.4.35"
rand_xorshift = "0.3.0"
serde = "1.0.193"
serde_json = "1.0.108"
testground = "0.4.0"
tokio = { version = "1.34.0", features = ["macros"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# *** mock *** ################################################################
aes-gcm = "0.9.4"
rand = "0.8.5"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
# This version must be kept up to date do it uses the same dependencies as ENR
hkdf = "0.12.3"
enr = { version = "0.9.0", features = ["k256", "ed25519"] }
# #############################################################################
